syntax = "proto3";

package books_users_service.books_users;

option go_package = "./gen/go/books_users;pb_books_users";

service BooksUsersService {
  rpc RentBook(RentBookRequest) returns (RentBookResponse) {}
}

message Book {
  string ISBN = 1;
  int64 count = 2;
  string name = 3;
  string author = 4;
  int64 ID = 5;
}

message User {
  int64 ID = 1;
  string phone = 2;
  string username = 3;
  string class = 4;
  int64 status = 5;
}

message BooksUsers {
  int64 ID = 1;
  Book Book = 2;
  User User = 3;
  bool isReturn = 4;
  bool isGet = 5;
}

message RentBookRequest {
  int64 bookID = 1;
  int64 userID = 2;
  int64 returnAt = 3;
}

message RentBookResponse {
  string error = 1;
  int64 status = 2;
}